<resources>
    <string name="app_name">App-Let</string>
    <string name="go_to_login_activity">Go to LogIn activity</string>
    <string name="Login">LogIn</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here!</string>
    <string name="forgot_password_click_here_to_see_hint">Forgot Password? Click here to see Hint!</string>
    <string name="password">Password</string>
    <string name="password_hint">Password hint</string>
    <string name="enter_app">Enter app</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="all">All</string>
    <string name="sign_out">Sign Out</string>
    <string name="navigation_drawer_open">close drawer</string>
    <string name="navigation_drawer_close">open drawer</string>
    <string name="description">Description</string>
    <string name="no_description_found">NO DESCRIPTION FOUND</string>
    <string name="images">Images</string>
    <string name="media">Media</string>
    <string name="number_of_rooms">Number of\nrooms</string>
    <string name="number_of_bedrooms">Number of\nbedrooms</string>
    <string name="filtered_list">Filtered list</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="address">Address with Postcode</string>
    <string name="map">Map</string>
    <string name="no_entries">No Entries</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="price">Price</string>
    <string name="email_not_found">It was not found a user with that email</string>
    <string name="no_possible_to_acess_hint">Error it was not possible to retrieve password hint</string>
    <string name="all_fileds">All fields must be answer, please try again</string>
    <string name="register_sucess">Register succeed</string>
    <string name="ry_again">Register failed, please try again</string>
    <string name="contact">Contact Number</string>
    <string name="you_must_add_at_least">You must add at least one photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="error">Error</string>
    <string name="property_updated">Property updated</string>
    <string name="property_added">Property added</string>
    <string name="updated">updated</string>
    <string name="added">added</string>
    <string name="property_title">Property Title</string>
    <string name="register">Register</string>
    <string name="doesnt_have_map_permitions">This aplication doen\'t have permition to show the map</string>
    <string name="we_cant_show_the_map">We can\'t show the map</string>
    <string name="ok">Ok</string>
    <string name="price_not_set_yet">No price info</string>
    <string name="google_maps_api_key">Please enter your google maps api key here</string>
    <string name="property_pictures">Property Pictures</string>
    <string name="area_sqft">Area in Sqft</string>

</resources>
