<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bck"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.W9221214.AppLet.ui.activities.Main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/activity_main_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_activity_items_margin"
        android:background="@drawable/green_btn_background"
        android:minWidth="@dimen/btn_width"
        android:text="@string/Login" />

    <Button
        android:id="@+id/activity_main_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_activity_items_margin"
        android:background="@drawable/green_btn_background"
        android:minWidth="@dimen/btn_width"
        android:text="@string/register" />

</LinearLayout>
